--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,18 @@ dependencies {
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.security:spring-security-test'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5:3.0.4.RELEASE'
+//    implementation 'org.slf4j:slf4j-api:1.7.32' //Logger, что-то типа адаптера для других логгеров
+//    testImplementation 'org.slf4j:slf4j-simple:1.7.32' //Logger, реализация подходил для тестов
+//    testImplementation 'org.slf4j:slf4j-log4j12:1.7.32' //Logger
+//    implementation 'org.apache.logging.log4j:log4j-core:2.14.1' //Не понял зачем надо
+
+
+
+
 }
 
 test {
