--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,23 @@
+//SQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/hd
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.show-sql=true
-
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+//Logging
+logging.level.root=INFO
+logging.pattern.console=%highlight(%-5level) %yellow(%date{dd MMM yyyy - HH:mm:ss.SSS}) [%thread] %logger{36} - %blue(%msg%n)
+logging.pattern.file=%-5level %date{dd MMM yyyy - HH:mm:ss.SSS} [%thread] %logger{36} - %msg%n
+logging.file.path=logs
+logging.file.max-size=2MB
+logging.file.max-history=2
+logging.file.total-size-cap=10MB
+logging.file.clean-history-on-start=true
+
+spring.security.user.name=gregory
+spring.security.user.password=gregory123
+
 
 
